# attention-mechanism

./: README.md  pyproject.toml  requirements.txt
att_tools/: __init__.py  attention.py  data.py  encoding.py
att_tools/attention/: __init__.py  functions.py  layers.py
att_tools/vit/: __init__.py  base.py  classifier.py  encoder.py  patches.py
attention/: __init__.py  dotprod.py  encoding.py  vit.py
atttools/: __init__.py  attention.py  data.py
atttools/vit/: __init__.py  base.py  classifier.py  encoder.py  patches.py  vit.py
config/: vit_fmnist.yaml  vit_mnist.yaml
notebooks/: cnn_attn.ipynb  intro.ipynb  shapes.ipynb  vit.ipynb  vit_fmnist.ipynb
scripts/: main.py
