[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["att_tools"]

[project]
name = "att-tools"
version = "0.0.1"
description = "Attention tools"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Joseph Nagel", email = "JosephBNagel@gmail.com"}
]
keywords = ["attention", "transformer", "vision transformer"]
dependencies = [
    "numpy",
    "torch",
    "torchvision",
    "lightning"
]

[project.optional-dependencies]
interactive = [
    "matplotlib",
    "notebook"
]

[project.urls]
source = "https://github.com/joseph-nagel/attention-mechanism"

