[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["att_tools"]

[project]
name = "att-tools"
version = "0.0.1"
description = "Attention tools"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Joseph Nagel", email = "JosephBNagel@gmail.com"}
]
keywords = ["attention", "transformer", "vision transformer"]
dependencies = [
    "numpy",
    "torch",
    "torchvision",
    "lightning",
    "omegaconf",
    "matplotlib",
    "notebook"
]

[project.optional-dependencies]
dev = ["mypy", "ruff"]

[project.urls]
source = "https://github.com/joseph-nagel/attention-mechanism"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
extend-select = ["E501"]  # include line-length violations that would be ignored otherwise (handled by formatter)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # ignore unused imports in __init__.py
"*.ipynb" = ["E741"]  # ignore ambiguous variable names (l/O/I) in notebooks

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false  # do not collapse multi-line collections with a trailing comma into a single line
